--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "country-state-city": "^3.1.4",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "moment": "^2.29.4",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
