--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@tremor/react": "^3.2.6",
     "autoprefixer": "10.4.14",
     "country-state-city": "^3.1.4",
     "eslint": "8.43.0",
